# SignalSim

./: .gitignore  README.md
EphData/: MGUE00ARG_R_20200950000_01D_GN.rnx
IFdataGen/: BDS_B1C_Only.json  BDS_B1I_Only.json  BDS_B2a_only.json  BDS_B2b_only.json  BDS_B3I_only.json  CMakeLists.txt  CMakeSettings.json  GAL_E5a_only.json  GAL_E5b_only.json  GLO_G1_only.json  GLO_G2_only.json  GNSS_Signal_Calculations.md  GPS_BDS_GAL_GLO_L1G1_46MHz.json  GPS_BDS_GAL_L1_5MHz.json  GPS_BDS_GAL_L1_B1I_18MHz.json  GPS_BDS_GAL_L5E5aB2a_24MHz.json  GPS_L5_only.json  IFdataGen  IFdataGen.cpp  IFdataGen.sln  IFdataGen.vcxproj  IFdataGen.vcxproj.filters  IFdataGenThread.cpp  IfGenTest.json  Makefile  README.md  SatIfSignal.cpp  SatIfSignal.h  test_matrix_length.cpp
IFdataGen/EphData/: OWMG00NZL_R_20200950000_01D_GN.rnx
IFdataGen/configs/: BDS_GAL_B3I_E6.json  GPS_BDS_GAL_GLO_L1CA_L1C_B1C_B1I_E1_G1.json  GPS_BDS_GAL_GLO_L2C_B2I_B2b_E5b_G2.json  GPS_BDS_GAL_L1CA_L1C_B1C_B1I_E1.json  GPS_BDS_GAL_L1CA_L1C_B1C_E1.json  GPS_BDS_GAL_L5_B2a_E5a.json  IfGenTest.json  example.json
IFdataGen/gnsssdr-configs/: GPS_BDS_GAL_GLO_L1CA_L1C_B1C_B1I_E1_G1.conf  GPS_BDS_GAL_L1CA_L1C_B1C_B1I_E1.conf  README.md
IFdataGen/inc/: BCNav1Bit.h  BCNav2Bit.h  CNav2Bit.h  CNavBit.h  ConstVal.h  Coordinate.h  D1D2NavBit.h  FastMath.h  JsonInterpreter.h  NavBit.h  NavData.h  PowerControl.h  SatIfSignal.h  SatelliteParam.h  SatelliteSignal.h  Tracking.h  Trajectory.h  XmlElement.h
IFdataGen/src/: BCNav1Bit.cpp  BCNavBit.cpp  CNav2Bit.cpp  CNavBit.cpp  Coordinate.cpp  D1D2NavBit.cpp  FastMath.cpp  GNavBit.cpp  GnssTime.cpp  JsonInterpreter.cpp  NavBit.cpp  PilotBit.cpp  PowerControl.cpp  Rinex.cpp
JsonObsGen/: JsonObsGen.cpp  JsonObsGen.sln  JsonObsGen.vcxproj  JsonObsGen.vcxproj.filters  test_obs2.json  test_obs3.json
XmlObsGen/: CMakeLists.txt  ObsGen.cpp  reference.kml  reference.pos  test.pos  test_obs.xml  test_obs2.xml  test_pos.xml
XmlObsGen/EphData/: ABPO00MDG_R_20200950000_01D_GN.rnx  BOR100POL_R_20200950000_01D_GN.rnx  JFNG00CHN_R_20200950000_01D_GN.rnx  JPLM00USA_R_20200950000_01D_GN.rnx
docs/: complete_gnss_navigation_messages_structure.md  полная_структура_навигационных_сообщений.md
inc/: Almanac.h  BCNav1Bit.h  BCNav2Bit.h  BCNav3Bit.h  BCNavBit.h  BasicTypes.h  CNav2Bit.h  ComplexNumber.h  ConstVal.h  Coordinate.h  D1D2NavBit.h  DelayModel.h  FNavBit.h  FastMath.h  GNavBit.h  GaussNoise.h  GnssTime.h  INavBit.h  JsonComposer.h  JsonInterpreter.h  JsonParser.h  LNavBit.h  MessageOutput.h  NavBit.h  NavData.h  PilotBit.h  PowerControl.h  PrnCode.h  PrnGenerate.h  Rinex.h  SatIfSignal.h  SatelliteParam.h  SatelliteSignal.h  SignalSim.h  Trajectory.h  XmlElement.h  XmlInterpreter.h  XmlTrajectory.h
src/: Almanac.cpp  BCNav1Bit.cpp  BCNav2Bit.cpp  BCNav3Bit.cpp  BCNavBit.cpp  CNav2Bit.cpp  CNavBit.cpp  ComplexNumber.cpp  Coordinate.cpp  D1D2NavBit.cpp  DelayModel.cpp  FNavBit.cpp  FastMath.cpp  GNavBit.cpp  GaussNoise.cpp  GnssTime.cpp  INavBit.cpp  JsonComposer.cpp  JsonInterpreter.cpp  JsonParser.cpp  LNavBit.cpp  MessageOutput.cpp  NavBit.cpp  NavData.cpp  PilotBit.cpp  PowerControl.cpp  PrnCode.cpp  PrnGenerate.cpp  Rinex.cpp  SatIfSignal.cpp  SatelliteParam.cpp  SatelliteSignal.cpp  Trajectory.cpp  XmlArguments.cpp  XmlElement.cpp  XmlInterpreter.cpp  XmlTrajectory.cpp
